# Heart-Failure

./: README.md  app.py  etl.py  pyproject.toml
artifacts/: feature_columns.json  heart_failure.pkl
deploy/: README.md  app.py  model_pipeline.pkl  requirements.txt
modeling/: deploy.py  eval.py  hyperparams.py  metrics.json  params.json  threshold.json  threshold.py
notebooks/: EDA_heart_failure.ipynb  baseline_heart_failure.ipynb  deployment_heart_failure.ipynb  final_model_heart_failure.ipynb  model_evaluations.ipynb
src/heart_failure/data_layers/bronze/: bronze.sql
src/heart_failure/data_layers/gold/: macros.sql  offline.sql  online.sql
src/heart_failure/data_layers/silver/: silver.sql
